<svg> fails to use explicit width and height inside <html> inside IFRAME https://bugs.webkit.org/show_bug.cgi?id=64823

Reviewed by Nikolas Zimmermann.

Source/WebCore:

Checking that embedded SVG is in an SVG document before negotiating size
with the host document.

Test: svg/as-object/svg-embedded-in-html-in-iframe.html

* rendering/svg/RenderSVGRoot.cpp:
(WebCore::isEmbeddedThroughFrameContainingSVGDocument):
(WebCore::RenderSVGRoot::computeReplacedLogicalWidth):
(WebCore::RenderSVGRoot::computeReplacedLogicalHeight):

LayoutTests:

Fixing a bug where SVG negotiated size when embedded in html inside an iframe.

* platform/chromium/test_expectations.txt: Will update with results on other platforms.
* platform/mac/svg/as-object/svg-embedded-in-html-in-iframe-expected.png: Added.
* platform/mac/svg/as-object/svg-embedded-in-html-in-iframe-expected.txt: Added.
* svg/as-object/svg-embedded-in-html-in-iframe.html: Added.


Canonical link: https://commits.webkit.org/86932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98263 268f45cc-cd09-0410-ab3c-d52691b4dbfc